--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,10 +5,11 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  test:
+  e2e-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+    - name: Get code
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
@@ -17,8 +18,10 @@ jobs:
       run: npm install
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
+    - name: Run E2E tests
       run: npx playwright test
+
+    - name: publish HTML report 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
